<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/dialog_holo_light_frame">

<TextView
    android:id="@+id/ey_date_text_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/ey_date"/>
    <TextView
        android:id="@+id/ey_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ey_time"/>
    <TextView
        android:id="@+id/ey_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ey_name"/>
    <TextView
        android:id="@+id/ey_location_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ey_location"/>
    <TextView
        android:id="@+id/ey_organiser_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ey_organiser"/>
</LinearLayout>
