<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_nav_drawer_menu_camera"
            android:title="@string/camera" />
        <item
            android:id="@+id/nav_galery"
            android:icon="@drawable/ic_nav_drawer_menu_gallery"
            android:title="@string/galery" />
    </group>
    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_communities"
                android:icon="@drawable/ic_nav_drawer_menu_communities"
                android:title="@string/communities" />
        </menu>
    </item>
</menu>
