<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/em_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/uxbridge"/>
    <TextView
        android:id="@+id/em_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/em_date"/>
    <TextView
        android:id="@+id/em_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/em_time"/>
    <TextView
        android:id="@+id/em_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/em_name"/>
    <TextView
        android:id="@+id/em_location_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/em_location"/>
    <TextView
        android:id="@+id/em_organiser_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/em_organiser"/>

</LinearLayout>
